[package]
name = "ringmaster"
description = "FIFO / LIFO with superpowers - 'A ringmaster or ringmistress, or sometimes a ringleader, is a significant performer in many circuses' (Wikipedia)."
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/i-think-rapido/ringmaster"
version = "0.1.0"
authors = ["Romeo Disca <romeo.disca@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
