[package]
name = "ringmaster"
description = "async FIFO / LIFO with superpowers - 'A ringmaster or ringmistress, or sometimes a ringleader, is a significant performer in many circuses' (Wikipedia)."
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/i-think-rapido/ringmaster"
version = "0.3.2"
authors = ["Romeo Disca <romeo.disca@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "~0.2.22", features = ["sync"] }

[dev-dependencies]
tokio = { version = "~0.2.22", features = ["rt-threaded", "macros"] }

