[package]
name = "ringmaster"
description = "async FIFO / LIFO with superpowers - 'A ringmaster or ringmistress, or sometimes a ringleader, is a significant performer in many circuses' (Wikipedia)."
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/i-think-rapido/ringmaster"
version = "0.9.0"
authors = ["Romeo Disca <romeo.disca@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
